Fix overflow issue on mobile

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -10,6 +10,7 @@
     min-height: 600px;
     height: 65%;
     position: relative;
+    overflow-x: hidden;
 
     &__content {
       height: 100%;
